[package]
name = "polars-algo"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Algorithms built upon Polars primitives"

[dependencies]
polars-core = { workspace = true, features = ["dtype-categorical", "asof_join"], default-features = false }
polars-lazy = { workspace = true, features = ["asof_join", "concat_str", "strings"] }
polars-ops = { workspace = true, features = ["dtype-categorical", "asof_join"], default-features = false }

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
