[package]
name = "polars-compute"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Private compute kernels for the Polars DataFrame library"

[dependencies]
arrow = { workspace = true }
atoi_simd = { workspace = true, optional = true }
bytemuck = { workspace = true }
chrono = { workspace = true, optional = true }
either = { workspace = true }
fast-float2 = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
num-traits = { workspace = true }
polars-error = { workspace = true }
polars-utils = { workspace = true }
ryu = { workspace = true, optional = true }
strength_reduce = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[build-dependencies]
version_check = { workspace = true }

[features]
cast = [
  "gather",
  "arrow/chrono-tz",
  "dep:atoi_simd",
  "dep:chrono",
  "dep:fast-float2",
  "dep:itoa",
  "dep:ryu",
]
gather = []
nightly = []
simd = ["arrow/simd"]
approx_unique = []
dtype-array = []
dtype-decimal = ["arrow/dtype-decimal", "dtype-i128"]
dtype-i128 = []
