[package]
name = "polars-compute"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Private compute kernels for the Polars DataFrame library"

[dependencies]
arrow = { workspace = true }
atoi_simd = { workspace = true, optional = true }
bytemuck = { workspace = true }
chrono = { workspace = true, optional = true }
either = { workspace = true }
fast-float2 = { workspace = true, optional = true }
half = { workspace = true, optional = true, features = ["num-traits", "bytemuck"] }
hashbrown = { workspace = true }
itoa = { workspace = true, optional = true }
num-traits = { workspace = true }
polars-buffer = { workspace = true }
polars-error = { workspace = true }
polars-utils = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
strength_reduce = { workspace = true }
strum_macros = { workspace = true }
zmij = { workspace = true, optional = true }

[dev-dependencies]
bigdecimal = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }

arrow = { workspace = true, features = ["proptest"] }
proptest = { workspace = true }

[build-dependencies]
version_check = { workspace = true }

[features]
cast = [
  "gather",
  "arrow/chrono-tz",
  "dep:atoi_simd",
  "dep:chrono",
  "dep:fast-float2",
  "dep:itoa",
  "dep:zmij",
]
gather = []
nightly = []
simd = ["arrow/simd"]
approx_unique = []
dtype-array = []
dtype-decimal = ["arrow/dtype-decimal", "dtype-i128"]
dtype-i128 = []
dtype-u128 = []
dtype-f16 = ["dep:half"]
dsl-schema = ["dep:schemars"]

[lints]
workspace = true
